2005-02-03  Sven Neumann  <sven@gimp.org>

	* app/main.c: more work on the command-line option parser.

2005-02-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-utils.[ch] (gimp_check_glib_version): removed this
	function.

	* app/sanity.c (sanity_check_glib): use glib_check_version()
	instead and set required version to 2.6.0.

2005-02-02  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on glib >= 2.6.0.

	* app/main.c: use the new GLib commandline option parser. Still
	work in progress.

2005-02-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-convert.c (gimp_image_convert): relax/rigor
	the floating selection around the convert operations so color
	analysis for indexed conversion works on the floating selection's
	drawable original pixels, and not on the composited one.
	Fixes bug #165342.

2005-02-02  Sven Neumann  <sven@gimp.org>

	* data/misc/gimp.desktop.in.in (_Name): experimentally expand the
	GIMP acronym. Not sure if this is a good idea at all...

2005-02-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_do): tiny optimization
	based on a patch by Bill Skaggs. Process up to 16 tiles in one go
	before updating the display.

2005-01-31  Sven Neumann  <sven@gimp.org>

	* themes/Default/images/Makefile.am
	* themes/Default/images/tools/stock-tool-new-rect-select-16.png
	* themes/Default/images/tools/stock-tool-new-rect-select-22.png
	* libgimpwidgets/gimpstock.[ch]: removed the new icon again;
	there's no point in adding a stock icon temporarily.

	* app/tools/gimpnewrectselecttool.c: changed accordingly.

2005-01-31  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpnewrectselecttool.[ch]: new rectangle select tool

	* app/tools/Makefile.am
	* app/tools/gimp-tools.c: add it to toolbox

	* app/tools/gimpselectionoptions.[ch]: set its options
	
	* themes/Default/images/tools/stock-tool-new-rect-select-16.png
	* themes/Default/images/tools/stock-tool-new-rect-select-22.png:
	toolbox icon
	