@@ -33,8 +33,7 @@ void      app_abort     (gboolean             no_interface,
 void      app_exit      (gint                 status) G_GNUC_NORETURN;
 
 void      app_run       (const gchar         *full_prog_name,
-                         gint                 gimp_argc,
-                         gchar              **gimp_argv,
+                         const gchar        **filenames,
                          const gchar         *alternate_system_gimprc,
                          const gchar         *alternate_gimprc,
                          const gchar         *session_name,
